Fetch libretro-common

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,11 @@ FetchContent_GetProperties(melonDS)
 set(BUILD_QT_SDL OFF)
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${melonDS_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 
-FetchContent_MakeAvailable(melonDS)
+
+FetchContent_Declare(
+    libretro-common
+    GIT_REPOSITORY https://github.com/libretro/libretro-common.git
+    GIT_TAG 20a43ba
+) # TODO: Make GIT_TAG and GIT_REPOSITORY values configurable
+
+FetchContent_MakeAvailable(melonDS libretro-common)
