Update the code some more

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -9,7 +9,7 @@ add_library(libretro SHARED
     platform/semaphore.cpp
     platform/mutex.cpp
     ../rthreads/rsemaphore.c
-    input.cpp input.hpp opengl.cpp opengl.hpp)
+    input.cpp input.hpp opengl.cpp opengl.hpp memory.cpp memory.hpp utils.cpp)
 
 target_include_directories(libretro SYSTEM PUBLIC
     "${libretro-common_SOURCE_DIR}/include"
