--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -13,11 +13,11 @@ add_library(libretro SHARED
     platform/semaphore.cpp
     platform/thread.cpp
     screenlayout.cpp
-    )
+    platform/file.cpp)
 
 target_include_directories(libretro SYSTEM PUBLIC
     "${libretro-common_SOURCE_DIR}/include"
     "${melonDS_SOURCE_DIR}/src"
     )
-target_compile_definitions(libretro PUBLIC JIT_ENABLED HAVE_OPENGL OGLRENDERER_ENABLED HAVE_THREADS) # TODO: Disable on certain platforms
+target_compile_definitions(libretro PUBLIC JIT_ENABLED HAVE_OPENGL OGLRENDERER_ENABLED HAVE_THREADS PLATFORMOGL_H) # TODO: Disable on certain platforms
 # TODO: Set the target's name
