--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -22,3 +22,5 @@ target_include_directories(libretro SYSTEM PUBLIC
 target_compile_definitions(libretro PUBLIC JIT_ENABLED HAVE_OPENGL OGLRENDERER_ENABLED HAVE_THREADS PLATFORMOGL_H) # TODO: Disable on certain platforms
 set_target_properties(libretro PROPERTIES PREFIX "" OUTPUT_NAME "melondsds_libretro")
 # Name the output library "melondsds_libretro.dll" instead of "libmelondsds_libretro.dll", as is the convention
+
+target_link_libraries(libretro libretro-common)
