--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
 jobs:
-  build:
+  x86_64:
     runs-on: ubuntu-latest
     continue-on-error: ${{ !matrix.release }}
     strategy:
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: |
-          sudo rm -f /etc/apt/sources.list.d/dotnetdev.list /etc/apt/sources.list.d/microsoft-prod.list
+          sudo rm -f /etc/apt/sources.list.d/dotnetdev.list /etc/apt/sources.list.d/microsoft-prod.list /etc/apt/sources.list.d/kubernetes.list
           # Don't check for dependencies that we won't use
 
           sudo apt-get update
@@ -39,6 +39,63 @@ jobs:
       - name: Configure
         working-directory: "${{ env.BUILD_DIR }}"
         run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}"
+      - name: Build
+        working-directory: "${{ env.BUILD_DIR }}"
+        run: make -j$(nproc --all)
+      - name: Package for Release
+        if: matrix.release
+        env:
+          ZIP_ROOT: "${{ env.DIST_DIR }}/cores"
+        run: |
+          mkdir --parents "$ZIP_ROOT"
+          cp --force "$BUILD_DIR/src/libretro/melondsds_libretro.so" "$ZIP_ROOT"
+          cp --force "${{github.workspace}}/melondsds_libretro.info" "$ZIP_ROOT"
+          cd "$DIST_DIR"
+          zip -r "$DIST_DIR/$ARCHIVE_NAME.zip" "cores"
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        if: matrix.release
+        with:
+          name: ${{ env.ARCHIVE_NAME }}
+          if-no-files-found: error
+          path: "${{ env.DIST_DIR }}/${{ env.ARCHIVE_NAME }}.zip"
+
+  aarch64:
+    runs-on: ubuntu-latest
+    continue-on-error: ${{ !matrix.release }}
+    strategy:
+      matrix:
+        include:
+          - repo: https://github.com/JesseTG/melonDS.git
+            commit: 46ee85de
+            release: true
+          - repo: https://github.com/melonDS-emu/melonDS.git
+            commit: ca7fb4f
+            release: false
+            # This profile is used to receive advanced notice of breaking changes
+    env:
+      BUILD_DIR: "${{runner.workspace}}/build"
+      DIST_DIR: "${{runner.workspace}}/build/dist"
+      ARCHIVE_NAME: "melondsds_libretro-linux-aarch64"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo dpkg --add-architecture arm64
+          sh -c "sed \"s|^deb \([a-z\.:/]*\) \([a-z\-]*\) \(.*\)$|deb [arch=amd64] \1 \2 \3\ndeb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports \2 \3|\" /etc/apt/sources.list > /etc/apt/sources.list.new"
+          rm /etc/apt/sources.list
+          mv /etc/apt/sources.list{.new,}
+          sudo apt-get update
+          sudo apt-get install -y {gcc-10,g++-10}-aarch64-linux-gnu {pkg-config,libepoxy-dev}:arm64 cmake extra-cmake-modules dpkg-dev
+      - name: Create build environment
+        run: mkdir --parents "$BUILD_DIR"
+      - name: Configure
+        working-directory: "${{ env.BUILD_DIR }}"
+        env:
+          CC: aarch64-linux-gnu-gcc-10
+          CXX: aarch64-linux-gnu-g++-10
+        run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}" -DPKG_CONFIG_EXECUTABLE:STRING="/usr/bin/aarch64-linux-gnu-pkg-config"
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
         run: make -j$(nproc --all)
