--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
       - main
+env:
+  BUILD_DIR: "${{runner.workspace}}/build"
+  DIST_DIR: "${{runner.workspace}}/build/dist"
 jobs:
   x86_64:
     runs-on: ubuntu-latest
@@ -22,8 +25,6 @@ jobs:
             release: false
             # This profile is used to receive advanced notice of breaking changes
     env:
-      BUILD_DIR: "${{runner.workspace}}/build"
-      DIST_DIR: "${{runner.workspace}}/build/dist"
       ARCHIVE_NAME: "melondsds_libretro-linux-x86_64"
     steps:
       - uses: actions/checkout@v3
@@ -74,8 +75,6 @@ jobs:
             release: false
             # This profile is used to receive advanced notice of breaking changes
     env:
-      BUILD_DIR: "${{runner.workspace}}/build"
-      DIST_DIR: "${{runner.workspace}}/build/dist"
       ARCHIVE_NAME: "melondsds_libretro-linux-aarch64"
     steps:
       - uses: actions/checkout@v3
@@ -95,7 +94,7 @@ jobs:
         env:
           CC: aarch64-linux-gnu-gcc-10
           CXX: aarch64-linux-gnu-g++-10
-        run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}" -DPKG_CONFIG_EXECUTABLE:STRING="/usr/bin/aarch64-linux-gnu-pkg-config"
+        run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}"
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
         run: make -j$(nproc --all)
