--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -8,8 +8,8 @@ on:
     branches:
       - main
 env:
-  BUILD_DIR: "${{runner.workspace}}/build"
-  DIST_DIR: "${{runner.workspace}}/build/dist"
+  BUILD_DIR: "${{github.workspace}}/build"
+  DIST_DIR: "${{github.workspace}}/build/dist"
 jobs:
   x86_64:
     runs-on: ubuntu-latest
