--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
-        run: cmake --build .
+        run: cmake --build "$GITHUB_WORKSPACE"
       - name: Package for Release
         if: matrix.release
         env:
