Add the info file to the Windows archive

--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -59,11 +59,11 @@ jobs:
           cp --force "$BUILD_DIR/src/libretro/melondsds_libretro.dll" "$CORES_PATH"
           cp --force "${{github.workspace}}/melondsds_libretro.info" "$INFO_PATH"
           cd "$DIST_DIR"
-          zip -r "$DIST_DIR/$ARCHIVE_NAME.zip" "cores"
+          zip -r "$ARCHIVE_NAME.zip" "$ZIP_ROOT"
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         if: matrix.release
         with:
           name: ${{ env.ARCHIVE_NAME }}
           if-no-files-found: error
-          path: "${{ env.DIST_DIR }}/${{ env.ARCHIVE_NAME }}.zip"
+          path: "${{ env.ARCHIVE_NAME }}.zip"
