--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -93,6 +93,7 @@ jobs:
           CC: aarch64-linux-gnu-gcc-10
           CXX: aarch64-linux-gnu-g++-10
         run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}"
+      - uses: olemorud/gcc-problem-matcher@v1.0
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
         run: make -j$(nproc --all)
