--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -45,6 +45,7 @@ jobs:
       - name: Configure
         working-directory: "${{ env.BUILD_DIR }}"
         run: cmake "$GITHUB_WORKSPACE" -G"MinGW Makefiles" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}"
+      - uses: olemorud/gcc-problem-matcher@v1.0
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
         run: mingw32-make -j$(nproc --all)
