--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -36,7 +36,8 @@ jobs:
       - name: Configure
         working-directory: "${{ env.BUILD_DIR }}"
         run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}"
-      - uses: olemorud/gcc-problem-matcher@v1.0
+      - name: Install GCC problem matcher
+        uses: olemorud/gcc-problem-matcher@v1.0
       - name: Build
         working-directory: "${{ env.BUILD_DIR }}"
         run: make -j$(sysctl -n hw.logicalcpu)
