--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -12,11 +12,14 @@ env:
   BUILD_DIR: "${{github.workspace}}/build"
   DIST_DIR: "${{github.workspace}}/build/dist"
 jobs:
-  x86_64:
+  build:
     runs-on: macos-latest
     continue-on-error: ${{ !matrix.release }}
     strategy:
       matrix:
+        arch:
+          - x86_64
+          - arm64
         include:
           - repo: https://github.com/JesseTG/melonDS.git
             commit: 46ee85de
@@ -35,7 +38,7 @@ jobs:
         run: brew install pkg-config cmake
       - name: Configure
         working-directory: "${{ env.BUILD_DIR }}"
-        run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}"
+        run: cmake "$GITHUB_WORKSPACE" -DMELONDS_REPOSITORY_URL:STRING="${{ matrix.repo }}" -DMELONDS_REPOSITORY_TAG:STRING="${{ matrix.commit }}" -DCMAKE_OSX_ARCHITECTURES:STRING="${{ matrix.arch }}"
       - name: Install GCC problem matcher
         uses: olemorud/gcc-problem-matcher@v1.0
       - name: Build
