Update the build to reflect a recently-merged PR upstream
- Set CMakeLists.txt to use the merged commit by default
- Build the core using master as a dependency

--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -18,10 +18,10 @@ jobs:
       matrix:
         include:
           - repo: https://github.com/JesseTG/melonDS.git
-            commit: 46ee85de
+            commit: 96c5712
             release: true
           - repo: https://github.com/melonDS-emu/melonDS.git
-            commit: ca7fb4f
+            commit: master
             release: false
             # This profile is used to receive advanced notice of breaking changes
     env:
