Enforce position-independent code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ FetchContent_GetProperties(melonDS)
 
 set(BUILD_STATIC ON)
 set(BUILD_QT_SDL OFF)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 if (NOT LIBRETRO_COMMON_REPOSITORY_URL)
     set(
