--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.15)
 
 cmake_policy(VERSION 3.15)
+message(STATUS "Using CMake ${CMAKE_VERSION}")
 
 project("melonDS DS"
     VERSION 0.0.0
